# poseidon_crypto

./: .gitignore  .golangci.yaml  Makefile  aaaa.s  go.mod  go.sum  utils.go
.github/workflows/: test.yml
curve/ecgfp5/: affine_point.go  curve_test.go  fuzz_test.go  point.go  scalar_field.go  scalar_field_test.go  signed161.go  signed640.go  u128.go  utils.go  weierstrass_point.go
ecgfp5/: curve.go  utils.go
ecgfp5/base_field/: field.go  field_test.go  goldilocks_utils.go
ecgfp5/curve/: affine_point.go  curve_test.go  point.go  weierstrass_point.go
ecgfp5/scalar_field/: field.go  field_test.go  signed161.go  signed640.go  utils.go
field/: extension_test.go  field_test.go  utils.go
field/goldilocks/: branch_hint.s  goldilocks.go  goldilocks2.go  goldilocks_gnark.go  goldilocks_plonky2.go  goldilocks_plonky2_amd64.s
field/goldilocks_quintic_extension/: goldilocks_quintic_extension.go
hash/: poseidon2_test.go
hash/poseidon2_goldilocks/: config.go  poseidon2.go  poseidon2_bench_test.go  poseidon2_purego.go  poseidon2_rust.go  poseidon2_test.go  types.go
hash/poseidon2_goldilocks_plonky2/: config.go  poseidon2.go  poseidon2_test.go
hash/poseidon2_goldilocks_rust/: poseidon2_bench_test.go  poseidon2_goldilocks_rust.go
hash/poseidon2_rust/: poseidon2_rust.go
int/: int_test.go  signed161.go  signed640.go  uint128.go
link/: lib.h  link.go
link/bindgen/: Cargo.toml
link/bindgen/src/: lib.rs
poseidon2_goldilocks/: poseidon2.go  poseidon2_test.go
schnorr/: schnorr.go  schnorr_test.go
signature/: schnorr.go  schnorr_test.go
(+6 files in other folders)
